Fix small screen layout problems

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 .parent {
   height: 0;
-  padding-bottom: 50%;
+  padding-bottom: 33%;
   position: relative;
 }
 
